<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    
    <FrameLayout
		android:id="@+id/ads_frame"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_alignParentTop="true">	
	   	<com.mobclix.android.sdk.MobclixMMABannerXLAdView
			android:id="@+id/banner_adview"
			android:layout_height="50dip"
			android:layout_width="320dip"
			android:layout_gravity="center"
			android:visibility="gone"/>
	</FrameLayout>
    <ScrollView 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:scrollbarStyle="outsideInset">
		<LinearLayout	  
			android:orientation="vertical"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<EditText android:id="@+id/name" 
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_margin="1dip"
				android:inputType="textPersonName"
				android:hint="@string/input_your_name">
				<requestFocus/>
			</EditText>
		    <TextView android:id="@+id/font_size"
		    	android:layout_height="wrap_content" 
		    	android:layout_width="wrap_content" 
				android:layout_margin="1dip"
		    	android:layout_gravity="center_vertical" 
		    	android:textColor="#ffffffff"
		    	android:text="@string/font_size"/>
		    <SeekBar android:id="@+id/font_size_bar"
		    	android:layout_height="wrap_content"
		    	android:layout_width="fill_parent"
				android:layout_margin="1dip"/>
			<RadioGroup
		        android:layout_width="fill_parent"
		        android:layout_height="wrap_content"
				android:layout_margin="1dip"
		        android:orientation="horizontal"
		        android:checkedButton="@+id/horizontal"
		        android:id="@+id/orientation">
		        <RadioButton
			    	android:layout_height="wrap_content" 
			    	android:layout_width="wrap_content"
			    	android:layout_weight="0.5" 
		            android:text="@string/horizontal"
		            android:id="@id/horizontal"/>
		        <RadioButton
			    	android:layout_height="wrap_content" 
			    	android:layout_width="wrap_content" 
			    	android:layout_weight="0.5"
		            android:text="@string/vertical"
		            android:id="@+id/vertical"/>
		    </RadioGroup>
			<Gallery android:id="@+id/font" 
				android:layout_height="wrap_content" 
				android:layout_width="fill_parent"
				android:layout_margin="1dip"
				android:spacing="2dip"
				android:unselectedAlpha="0.8"/>
			<Button android:id="@+id/get_name" 
				android:text="@string/get_name"
				android:textStyle="bold"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dip"
				android:layout_marginLeft="1dip"
				android:layout_marginRight="1dip"/>
			<TextView
		    	android:layout_height="wrap_content" 
		    	android:layout_width="wrap_content" 
				android:layout_margin="1dip"
		    	android:layout_gravity="left" 
		    	android:text="@string/powered_by"
		    	android:visibility="gone"/>
			<com.mobclix.android.sdk.MobclixIABRectangleMAdView
				android:id="@+id/rect_adview"
				android:layout_height="250dip"
				android:layout_width="320dip"
				android:layout_gravity="center"
				android:layout_marginTop="2dip"
				android:visibility="gone"/>
		</LinearLayout>
	</ScrollView>
</LinearLayout>
